--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">NewsApplication</string>
+    <!-- TODO: Remove or change this placeholder text -->
+
+    <string name="title">News Title is here</string>
+    <string name="author">AuthorName</string>
+    <string name="datetime">21 jan 2021</string>
+    <string name="dummy">dummy text</string>
+    <string name="desc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of</string>
+
 </resources>
