--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,5 @@
     <string name="datetime">21 jan 2021</string>
     <string name="dummy">dummy text</string>
     <string name="desc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of</string>
-
+    <string name="no_internet">No Internet Connection!!! \n Offline Content</string>
 </resources>
